DesafioPricing/force-app/main/default/objects/OrderItem/fields/DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentage__c</fullName>
    <description>Percentual do desconto.</description>
    <label>DiscountPercentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>