DesafioPricing/force-app/main/default/objects/OrderItem/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <description>Valor do desconto.</description>
    <label>DiscountValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>