DesafioPricing/force-app/main/default/objects/OrderItem/fields/FreightValue__c.field-meta.xml
<CustomField>
    <fullName>FreightValue__c</fullName>
    <description>Valor do frete.</description>
    <label>FreightValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>