DesafioPricing/force-app/main/default/objects/OrderItem/fields/MarginPercentage__c.field-meta.xml
<CustomField>
    <fullName>MarginPercentage__c</fullName>
    <description>Percentual da margem.</description>
    <label>MarginPercentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>