DesafioPricing/force-app/main/default/objects/OrderItem/fields/Product_Code_Display__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Display__c</fullName>
    <formula>Product2.UniqueCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueCode</label>
    <type>Text</type>
</CustomField>