DesafioPricing/force-app/main/default/objects/OrderItem/fields/TaxPercentage__c.field-meta.xml
<CustomField>
    <fullName>TaxPercentage__c</fullName>
    <description>Percentual do imposto.</description>
    <label>TaxPercentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>